--- a/network_params.yaml
+++ b/network_params.yaml
@@ -176,7 +176,7 @@ keymanager_enabled: false
 checkpoint_sync_enabled: false
 checkpoint_sync_url: ""
 ethereum_genesis_generator_params:
-  image: ethpandaops/ethereum-genesis-generator:3.7.0
+  image: us-east1-docker.pkg.dev/promising-rock-414216/wvm/ethereum-genesis-generator:latest
 port_publisher:
   nat_exit_ip: KURTOSIS_IP_ADDR_PLACEHOLDER
   el:
